# TarkovQuestTracker

./: .gitignore  BASELINE_FEATURES.md  CLOUD_DEPLOYMENT_SPEC.md  DEPLOYMENT_GUIDE.md  PROJECT_PLAN.md  README.md  SUPABASE_SETUP_GUIDE.md  SYNC_TESTING_GUIDE.md  TECHNICAL_SPECIFICATION.md  TESTING_GUIDE.md  api-test.html  clear-cache.html  index.html  package-lock.json  package.json  supabase-hideout-progress.sql  supabase-item-collection.sql  supabase-setup.sql  supabase-user-profiles-function.sql  supabase-user-profiles.sql  temp_git_version.js  vercel.json  vite.config.js
.github/agents/: copilot-instructions.md
.github/workflows/: desktop-build.yml
desktop-companion/: README.md  USER_GUIDE.md  import.html  index.html  package-lock.json  package.json  settings.html  wizard.html
desktop-companion/src/: AppController.ts  import.ts  main.ts  settings.ts  wizard.ts
desktop-companion/src-tauri/: Cargo.toml  tauri.conf.json
desktop-companion/src-tauri/capabilities/: default.json
desktop-companion/src-tauri/src/: app_state.rs  error.rs  lib.rs  log_watcher.rs  main.rs  system_tray.rs  tarkov_paths.rs
scripts/: fetch-quest-data.js
specs/001-vercel-supabase-deployment/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-user-quest-comparison/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-item-tracker/: data-model.md  plan.md  (+4 more)
src/: index.js
styles/: auth.css  hideout-tracker.css  item-tracker.css  main.css  ocr-feature.css  quest-graph.css  quest-list.css  user-comparison.css  wiki-modal.css
(+103 files in other folders)
