[package]
name = "tarkov-quest-companion"
version = "0.1.0"
description = "Automatic quest tracking desktop companion for Escape from Tarkov"
authors = ["Dylan Knevitt"]
edition = "2021"

[lib]
name = "tarkov_quest_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

